# prezmaker

./: .env.example  .gitignore  Cargo.toml  Makefile  README.en.md  README.md  config.example.toml  make.ps1
.claude/agent-memory/version-bumper/: MEMORY.md
.claude/agents/: version-bumper.md
.github/workflows/: build-windows.yml  release.yml
prezmaker-cli/: Cargo.toml
prezmaker-cli/src/: cli.rs  main.rs  orchestrator.rs
prezmaker-lib/: Cargo.toml
prezmaker-lib/src/: cache.rs  collections.rs  config.rs  db.rs  default_templates.rs  default_templates_html.rs  error.rs  lib.rs  mediainfo.rs  nfo.rs  orchestrator_api.rs  template_engine.rs  torrent.rs  torrent_creator.rs
prezmaker-lib/src/formatters/: app_fmt.rs  bbcode.rs  dispatch.rs  game_fmt.rs  html.rs  mod.rs  movie_fmt.rs  output_format.rs  series_fmt.rs
prezmaker-lib/src/models/: application.rs  common.rs  game.rs  media_analysis.rs  mod.rs  movie.rs  series.rs
prezmaker-lib/src/providers/: mod.rs  wikipedia.rs
prezmaker-lib/src/providers/allocine/: mod.rs  movie.rs  selectors.rs  series.rs
prezmaker-lib/src/providers/igdb/: game.rs  mod.rs  models.rs
prezmaker-lib/src/providers/llm/: mod.rs
prezmaker-lib/src/providers/steam/: mod.rs  models.rs
prezmaker-lib/src/providers/tmdb/: mod.rs  models.rs  movie.rs  series.rs
prezmaker-lib/src/providers/translator/: mod.rs
prezmaker-lib/src/template_engine/: blocks.rs  data.rs  mod.rs  preview.rs  render.rs  storage.rs  tags.rs
prezmaker-lib/src/upload/: c411.rs  mod.rs
scripts/: generate_icon.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bbcode_to_html.rs  commands.rs  lib.rs  main.rs
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/: AboutModal.tsx  AppForm.tsx  BBCodePalette.tsx  BBCodePanel.test.tsx  BBCodePanel.tsx  CollectionBrowser.tsx  CollectionSaveDialog.test.tsx  CollectionSaveDialog.tsx  Dashboard.tsx  GameExtrasForm.tsx  HtmlPreview.tsx  MovieExtrasForm.tsx  NfoModal.test.tsx  NfoModal.tsx  Onboarding.tsx  ResultSelector.tsx  Stepper.tsx  (+18 more)
(+14 files in other folders)
