[package]
name = "prezmaker-cli"
version = "1.21.1"
edition = "2021"
description = "CLI tool to generate BBCode presentations for torrent trackers"

[[bin]]
name = "prezmaker"
path = "src/main.rs"

[dependencies]
prezmaker-lib = { path = "../prezmaker-lib" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
dialoguer = "0.11"
arboard = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
