[package]
name = "prezmaker-lib"
version = "1.28.3"
edition = "2021"
description = "Shared library for PrezMaker BBCode presentation generator"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"], default-features = false }
tokio = { version = "1", features = ["full"] }
scraper = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
toml = "0.8"
dirs = "6"
async-trait = "0.1"
tracing = "0.1"
urlencoding = "2"
serde_bencode = "0.2"
regex = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
matroska = "0.23"
mp4 = "0.14"
rusqlite = { version = "0.31", features = ["bundled"] }
sha1 = "0.10"
