[package]
name = "prezmaker-tauri"
version = "1.36.0"
edition = "2021"
description = "PrezMaker GUI - Tauri backend"

[lib]
name = "prezmaker_tauri_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "prezmaker-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
prezmaker-lib = { path = "../prezmaker-lib" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
